// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render 1`] = `
<div>
  <button
    class="Button__StyledButton-mdtvtf-0 iSmMLw"
    type="button"
  />
</div>
`;

exports[`Button should render a large one 1`] = `
<div>
  <button
    class="Button__StyledButton-mdtvtf-0 kCtJaw"
    type="button"
  />
</div>
`;

exports[`Button should render a small one 1`] = `
<div>
  <button
    class="Button__StyledButton-mdtvtf-0 ejsUFX"
    type="button"
  />
</div>
`;

exports[`Button should render an icon 1`] = `
<div>
  <button
    class="Button__StyledButton-mdtvtf-0 ubItf"
    type="button"
  />
</div>
`;

exports[`Button should render as danger button 1`] = `
<div>
  <button
    class="Button__StyledButton-mdtvtf-0 bsLEUc"
    type="button"
  />
</div>
`;

exports[`Button should render as primary button 1`] = `
<div>
  <button
    class="Button__StyledButton-mdtvtf-0 iSmMLw"
    type="button"
  />
</div>
`;

exports[`Button should render as secondary button 1`] = `
<div>
  <button
    class="Button__StyledButton-mdtvtf-0 lmPdYN"
    type="button"
  />
</div>
`;

exports[`Button should render as transparent button 1`] = `
<div>
  <button
    class="Button__StyledButton-mdtvtf-0 esSerq"
    type="button"
  />
</div>
`;

exports[`Button should render if disabled 1`] = `
<DocumentFragment>
  <button
    class="Button__StyledButton-mdtvtf-0 iitCzz"
    disabled=""
    type="button"
  >
    Click
  </button>
</DocumentFragment>
`;
